--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
     </div>
 
     <script>
-        const repo = "CYBER-DEXTER-LITE/speen-data-";
-        const filePath = "lucky.json";
+        const repo = "CYBER-DEXTER-ID/luck";
+        const filePath = "luck.json";
         const token = "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";
 
         function showDialog(message) {
