--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <script>
-        const repo = "CYBER-DEXTER-ID/luck";
+        const repo = "https://github.com/CYBER-DEXTER-ID/luck.git";
         const filePath = "luck.json";
         const token = "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";
 
